주차자리 나옴

--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -374,11 +374,11 @@
                         '요금정보': place['fee_info'],
                         '주차장유형': place['type'],
                         '장애인전용주차구역보유여부': place['disabled_parking'],
-                        '남은자리': place['available_spots']
+                        '소재지지번주소': place['lot_address'],
+                        '남은자리': parseInt(place['available_spots']) 
                     });
                 });
-                
-                updateParkingDisplay();
+                //updateParkingDisplay();
             }
 
             // 실시간 데이터 갱신
@@ -386,19 +386,17 @@
                 fetch('/api/real-time-parking/')
                     .then(response => response.json())
                     .then(data => {
-
                         data.forEach(function(realTimeInfo) {
-                            parkingData.push({
-                                '소재지지번주소': realTimeInfo['lot_address'],
-                                '남은자리': realTimeInfo['available_spots']
-                            });
                             const parking = parkingData.find(p => p['소재지지번주소'] === realTimeInfo['lot_address']);
                             if (parking) {
-                                parking['남은자리'] = realTimeInfo['available_spots'];
+                                parking['남은자리'] = parseInt(realTimeInfo['available_spots']);
+                                if (parking['남은자리'] > 0) {
+                                    console.log(`주소: ${parking['소재지지번주소']}, 주차장: ${parking['주차장명']}, 남은자리: ${parking['남은자리']}`);
+                                }
                             }
                             
                         });
-                        updateParkingDisplay();
+                        //updateParkingDisplay();
                     })
                     .catch(error => console.error('실시간 데이터 로드 오류:', error));
             }
@@ -406,7 +404,7 @@
             // 주차장 데이터 표시 (예시)
             function updateParkingDisplay() {
                 parkingData.forEach(function(place) {
-                    // console.log(`주차장: ${place['주차장명']} | 남은 자리: ${place['남은자리']}개`);
+                    console.log(`주차장: ${place['주차장명']} | 남은 자리: ${place['남은자리']}개`);
                     // 지도 마커 또는 DOM 요소 업데이트
                 });
             }
