--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -299,6 +299,11 @@
     color: #007bff;
     font-size: 1.5rem;
 }
+.firstline i{
+    font-size: 2rem;
+    margin-bottom: 0.3rem;
+    cursor: pointer;
+}
 .star-rating {
     display: flex;
     gap: 5px;
