[fix]: 날아간 데이터 복원 및 찜기능 html병합

--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -299,6 +299,10 @@
     color: #007bff;
     font-size: 1.5rem;
 }
+.firstline i{
+    font-size: 2rem;
+    cursor: pointer;
+}
 .star-rating {
     display: flex;
     gap: 5px;
