fix: footer icon

--- a/templates/qanda_room.html
+++ b/templates/qanda_room.html
@@ -63,16 +63,11 @@
     </div>
     <footer>
         <div class="footer-top">
-            <a href="{% url 'demos:introduce' %}">Service</a>
-            <a href="{% url 'demos:aboutus' %}">About Us</a>
-            <a href="{% url 'demos:guidemap' %}">Guide Map</a>
-            <a href="{% url 'demos:qna' %}">Q&A</a>
-        </div>
-        <div class="footer-bottom">
-            <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
-            <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
-            <a href="{% url 'demos:insta' %}"><i class="ri-instagram-line"></i></a>
-            <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
+            <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
+            <a href="{% url 'demos:aboutus' %}"><i class="ri-team-fill"></i></a>
+            <a href="{% url 'demos:home' %}"><i class="ri-home-4-line"></i></a>
+            <a href="{% url 'demos:guidemap' %}"><i class="ri-route-line"></i></a>
+            <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
         </div>
     </footer>
 
