--- a/templates/introduce.html
+++ b/templates/introduce.html
@@ -6,20 +6,21 @@
             <h1>서비스 소개</h1>
             <p>지성 Park 서비스는 전국 운전자들의 주차 스트레스를 해소함과 동시에 주차 문제로 발생하는 불법 주정차 등의 사회적인 문제를 해결하기 위해서 만들어진 서비스입니다.</p>
             <p>현재 실시간 데이터를 제공하지 않는 지역이 존재하여 일부 지역을 대상으로만 실시간 서비스를 제공중입니다. 앞으로 더 많은 지역에 해당 추가할 예정입니다.</p>
+            <div class="footer-bottom">
+                <a href="https://github.com/pirogramming-project/JisungPark.git"><i class="ri-github-fill"></i></a>
+                <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
+                <a href="https://www.instagram.com/jissungpark_/"><i class="ri-instagram-line"></i></a>
+                <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
+            </div>
         </div>
     </div>
     <footer>
         <div class="footer-top">
-            <a href="{% url 'demos:introduce' %}">Service</a>
-            <a href="{% url 'demos:aboutus' %}">About Us</a>
-            <a href="{% url 'demos:guidemap' %}">Guide Map</a>
-            <a href="{% url 'demos:qna' %}">Q&A</a>
-        </div>
-        <div class="footer-bottom">
-            <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
-            <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
-            <a href="{% url 'demos:insta' %}"><i class="ri-instagram-line"></i></a>
-            <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
+            <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
+            <a href="{% url 'demos:aboutus' %}"><i class="ri-team-fill"></i></a>
+            <a href="{% url 'demos:home' %}"><i class="ri-home-4-line"></i></a>
+            <a href="{% url 'demos:guidemap' %}"><i class="ri-route-line"></i></a>
+            <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
         </div>
     </footer>
 {% endblock %}
