--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -43,6 +43,7 @@
     font-size: 1.2rem;
     border-radius: 4px;
     font-size: 1.3rem;
+    margin-bottom: 2rem;
 }
 .off-button{
     margin-top: 2.5rem;
@@ -275,7 +276,8 @@
     border: none;
     border-bottom: 1px solid #789;
     text-align: center;
-}.adjust{
+}
+.adjust{
     background-color: #e9e9e9;
     border-radius: 22%;
     padding: 2px;
